tests/ui/foreign_and.stderr
Error [E0012]: Lex writes "and" as `&&`
  --> tests/ui/foreign_and.lex:2:20
    |
  2 |     val ok = 1 > 0 and 2 > 1;
    |                    ^^^
 Why: logic uses the symbols `&&`, `||`, and `!`
 Fix: replace `and` with `&&`
